@@ -24,9 +24,7 @@
 //#include <unistd.h>
 #include <stdio.h>
 
-#include <sys/types.h>
-#include <sys/stat.h>
-#include <fcntl.h>
+#include "_fileconf.h"
 
 #ifdef HAVE_LIBZ
 #include <zlib.h>
