@@ -34,11 +34,6 @@ extern string ngcachehome;
 extern c_group_info_list groups;
 extern c_server_priority_grouping_list priogroups;*/
 
-#define PRIVMODE (S_IRUSR | S_IWUSR)
-#define PUBMODE (S_IRUSR | S_IWUSR | S_IRGRP | S_IROTH)
-//#define PUBXMODE (S_IRWXU | S_IRGRP | S_IXGRP | S_IROTH | S_IXOTH)
-#define PUBXMODE (S_IRWXU|S_IRWXG|S_IRWXO)
-
 
 void set_decode_error_status(int incr=1);
 void set_retrieve_error_status(int incr=1);
